added song library feature